<resources>
    <string name="app_name">Menu Card</string>
    <string name="order_label">Add to Order</string>
    <string name="account_label">Username</string>
    <string name="account_hint">Enter username...</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter password...</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_pass">Access without Login</string>
    <string name="register">New? Register now!</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_logout">Logout</string>
</resources>
