<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/black"
    tools:context="com.adilsal33m.menucard.Login">


    <ImageView
        android:id="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:scaleType="centerInside"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_label"
        android:textColor="@android:color/white"
        android:textSize="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/account_hint"
        android:padding="8dp"
        android:id="@+id/account_id"
        android:background="@drawable/text_shape"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@android:color/white"
        android:textSize="16dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:fontFamily=""
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/text_shape"/>
    <Button
        android:id="@+id/log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_shape_2"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <TextView
            android:id="@+id/login_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_pass"
            android:textColor="#dddddd"
            android:paddingRight="16dp"
            android:layout_alignParentRight="true"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#dddddd"
            android:paddingLeft="16dp"/>
    </RelativeLayout>
</LinearLayout>
